--- a/location/phd-1810.md
+++ b/location/phd-1810.md
@@ -1,13 +1,13 @@
 ---
-address: 1745 W. 20th St. Los Angeles, CA 90007
-title: PHD Apartments - 1745 West
+address: 1810 Magnolia Ave. Los Angeles, CA 90006
+title: PHD Apartments - 1810 Magnolia
 install_date: Early 2013
 
 layout: location
-image: "PHD-1745-W-20th-St-2_m200.jpg"
+image: "PHD-Arlington_m200.jpg"
 
-latitude: 34.038398
-longitude: -118.295995
+latitude: 34.041021
+longitude: -118.286295
 
 linky: http://ltsc.org/index.php?option=com_content&view=article&id=288
 
