updated phd 1745, but unable to find pic for 1810

--- a/location/phd-1745.md
+++ b/location/phd-1745.md
@@ -4,7 +4,7 @@ title: PHD Apartments - 1745 West
 install_date: Early 2013
 
 layout: location
-image: "PHD-1745-W-20th-St-2_m200.jpg"
+image: "PHD-1745-W-20th-St_800.jpg"
 
 latitude: 34.038398
 longitude: -118.295995
