further updates in completion dates for properties

--- a/location/phd-1810.md
+++ b/location/phd-1810.md
@@ -1,7 +1,7 @@
 ---
 address: 1810 Magnolia Ave. Los Angeles, CA 90006
 title: PHD Apartments - 1810 Magnolia
-install_date: Early 2013
+install_date: 2011
 
 layout: location
 image: "PHD-Arlington_m200.jpg"
