--- a/location/phd-1745.md
+++ b/location/phd-1745.md
@@ -1,7 +1,7 @@
 ---
 address: 1745 W. 20th St. Los Angeles, CA 90007
 title: PHD Apartments - 1745 West
-install_date: Early 2013
+install_date: 2011
 
 layout: location
 image: "PHD-1745-W-20th-St_800.jpg"
