--- a/location/36th.md
+++ b/location/36th.md
@@ -1,5 +1,6 @@
 ---
-address: 157-161 E. 36th St. Los Angeles, CA 90011  title: Broadway Apartments
+address: 157-161 E. 36th St. Los Angeles, CA 90011  
+title: Broadway Apartments
 install_date: 2011/2012
 
 layout: location
