--- a/location/36th.md
+++ b/location/36th.md
@@ -4,7 +4,7 @@ title: Broadway Apartments
 install_date: 2011/2012
 
 layout: location
-image: "Angelina_800.jpg"
+image: "36th-St-&-Broadway---Broadway_800.jpg"
 
 latitude: 34.016430
 longitude: -118.271542
