--- a/location/phd-1745.md
+++ b/location/phd-1745.md
@@ -1,6 +1,6 @@
 ---
-address: 1745 W. 20th St. Los Angeles, CA 90007
-title: PHD Apartments - 1745 West
+address: 1745 W. 20th St., Los Angeles, CA 90007
+title: PHD Apartments – 1745 W. 20th St.
 install_date: 2011
 
 layout: location
