--- a/location/36th.md
+++ b/location/36th.md
@@ -1,5 +1,5 @@
 ---
-address: 157-161 E. 36th St. Los Angeles, CA 90011  
+address: 157-161 E. 36th St., Los Angeles, CA 90011  
 title: Broadway Apartments
 install_date: 2011/2012
 
