--- a/location/phd-1810.md
+++ b/location/phd-1810.md
@@ -1,6 +1,6 @@
 ---
 address: 1810 Magnolia Ave., Los Angeles, CA 90006
-title: PHD Apartments – 1810 Magnolia Ave.
+title: PHD Apartments 1810 Magnolia Ave.
 install_date: 2011
 
 layout: location
