have updated to correct image

--- a/location/phd-1810.md
+++ b/location/phd-1810.md
@@ -4,7 +4,7 @@ title: PHD Apartments 1810 Magnolia Ave.
 install_date: 2011
 
 layout: location
-image: "PHD-Arlington_m200.jpg"
+image: "Magnolia.jpg"
 
 latitude: 34.041021
 longitude: -118.286295
